[gd_scene load_steps=2 format=3 uid="uid://dbfsgvo8rfg6b"]

[ext_resource type="Script" path="res://vernam.gd" id="1_xqfd3"]

[node name="vernam" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xqfd3")

[node name="TextEdit1" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 313.0
offset_top = 155.0
offset_right = 696.0
offset_bottom = 224.0
placeholder_text = "Texto a cifrar o descifrar"

[node name="TextEdit2" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 313.0
offset_top = 231.0
offset_right = 696.0
offset_bottom = 271.0
placeholder_text = "Clave"

[node name="TextEdit3" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 306.0
offset_top = 310.0
offset_right = 689.0
offset_bottom = 379.0
placeholder_text = "Resultado"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 283.0
offset_top = 37.0
offset_right = 907.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 50
text = "Cifrado de Vernam"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 367.0
offset_top = 439.0
offset_right = 595.0
offset_bottom = 495.0
text = "Ejecutar"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
